--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,4 +73,27 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    @apply font-bold;
+  }
+
+  h1 {
+    @apply text-2xl;
+  }
+
+  h2 {
+    @apply text-lg;
+  }
+
+  h3 {
+    @apply text-sm;
+  }
+
+  h4 {
+    @apply text-xs tracking-widest;
+  }
 }
